--- a/social/social_list/templates/home.html
+++ b/social/social_list/templates/home.html
@@ -1,4 +1,5 @@
 {% extends "base.html" %}
 {% block main_content_block %}
-  <h2>Hi, {{ user.username }}</h2>
+  <h2>Hi, {{ user.first_name }} ({{ user.player.nickname }})</h2>
+  <a href="logout/">Logout</a>
 {% endblock %}
