Functional test for searching users and groups

--- a/social/social_list/templates/base.html
+++ b/social/social_list/templates/base.html
@@ -6,6 +6,7 @@
   <body>
     <header>
       <h1>Social</h1>
+      {% block top_search_block %} {% endblock %}
     </header>
     <div class="main-container">
     {% if user.is_authenticated %}
