--- a/social/social_list/templates/home.html
+++ b/social/social_list/templates/home.html
@@ -1,4 +1,9 @@
 {% extends "base.html" %}
+{% block top_search_block %}
+  <form id="form_search" action="search/">
+    {{ search_form }}
+  </form>
+{% endblock %}
 {% block main_content_block %}
   <h2>Hi, {{ user.first_name }} ({{ user.player.nickname }})</h2>
   <a href="logout/">Logout</a>
