Added next to logout link

--- a/social/social_list/templates/home.html
+++ b/social/social_list/templates/home.html
@@ -6,5 +6,5 @@
 {% endblock %}
 {% block main_content_block %}
   <h2>Hi, {{ user.first_name }} ({{ user.player.nickname }})</h2>
-  <a href="logout/">Logout</a>
+  <a href="logout/?next=/">Logout</a>
 {% endblock %}
